@@ -168,9 +168,24 @@ public class TransportGetTrainedModelsStatsActionTests extends ESTestCase {
             buildNodeStats(
                 new IngestStats.Stats(2, 2, 3, 4),
                 Arrays.asList(
-                    new IngestStats.PipelineStat("pipeline1", new IngestStats.Stats(0, 0, 3, 1), new IngestStats.ByteStats(789, 0)),
-                    new IngestStats.PipelineStat("pipeline2", new IngestStats.Stats(1, 1, 0, 1), new IngestStats.ByteStats(123, 123)),
-                    new IngestStats.PipelineStat("pipeline3", new IngestStats.Stats(2, 1, 1, 1), new IngestStats.ByteStats(1234, 5678))
+                    new IngestStats.PipelineStat(
+                        ProjectId.DEFAULT,
+                        "pipeline1",
+                        new IngestStats.Stats(0, 0, 3, 1),
+                        new IngestStats.ByteStats(789, 0)
+                    ),
+                    new IngestStats.PipelineStat(
+                        ProjectId.DEFAULT,
+                        "pipeline2",
+                        new IngestStats.Stats(1, 1, 0, 1),
+                        new IngestStats.ByteStats(123, 123)
+                    ),
+                    new IngestStats.PipelineStat(
+                        ProjectId.DEFAULT,
+                        "pipeline3",
+                        new IngestStats.Stats(2, 1, 1, 1),
+                        new IngestStats.ByteStats(1234, 5678)
+                    )
                 ),
                 Arrays.asList(
                     Arrays.asList(
@@ -192,9 +207,24 @@ public class TransportGetTrainedModelsStatsActionTests extends ESTestCase {
             buildNodeStats(
                 new IngestStats.Stats(15, 5, 3, 4),
                 Arrays.asList(
-                    new IngestStats.PipelineStat("pipeline1", new IngestStats.Stats(10, 1, 3, 1), new IngestStats.ByteStats(5678, 123456)),
-                    new IngestStats.PipelineStat("pipeline2", new IngestStats.Stats(1, 1, 0, 1), new IngestStats.ByteStats(111, 222)),
-                    new IngestStats.PipelineStat("pipeline3", new IngestStats.Stats(2, 1, 1, 1), new IngestStats.ByteStats(555, 777))
+                    new IngestStats.PipelineStat(
+                        ProjectId.DEFAULT,
+                        "pipeline1",
+                        new IngestStats.Stats(10, 1, 3, 1),
+                        new IngestStats.ByteStats(5678, 123456)
+                    ),
+                    new IngestStats.PipelineStat(
+                        ProjectId.DEFAULT,
+                        "pipeline2",
+                        new IngestStats.Stats(1, 1, 0, 1),
+                        new IngestStats.ByteStats(111, 222)
+                    ),
+                    new IngestStats.PipelineStat(
+                        ProjectId.DEFAULT,
+                        "pipeline3",
+                        new IngestStats.Stats(2, 1, 1, 1),
+                        new IngestStats.ByteStats(555, 777)
+                    )
                 ),
                 Arrays.asList(
                     Arrays.asList(
@@ -230,13 +260,21 @@ public class TransportGetTrainedModelsStatsActionTests extends ESTestCase {
         IngestStats expectedStatsModel1 = new IngestStats(
             new IngestStats.Stats(10, 1, 6, 2),
             Collections.singletonList(
-                new IngestStats.PipelineStat("pipeline1", new IngestStats.Stats(10, 1, 6, 2), new IngestStats.ByteStats(6467, 123456))
+                new IngestStats.PipelineStat(
+                    ProjectId.DEFAULT,
+                    "pipeline1",
+                    new IngestStats.Stats(10, 1, 6, 2),
+                    new IngestStats.ByteStats(6467, 123456)
+                )
             ),
-            Collections.singletonMap(
-                "pipeline1",
-                Arrays.asList(
-                    new IngestStats.ProcessorStat("inference", "inference", new IngestStats.Stats(120, 12, 0, 1)),
-                    new IngestStats.ProcessorStat("grok", "grok", new IngestStats.Stats(10, 1, 0, 0))
+            Map.of(
+                ProjectId.DEFAULT,
+                Collections.singletonMap(
+                    "pipeline1",
+                    Arrays.asList(
+                        new IngestStats.ProcessorStat("inference", "inference", new IngestStats.Stats(120, 12, 0, 1)),
+                        new IngestStats.ProcessorStat("grok", "grok", new IngestStats.Stats(10, 1, 0, 0))
+                    )
                 )
             )
         );
@@ -244,10 +282,20 @@ public class TransportGetTrainedModelsStatsActionTests extends ESTestCase {
         IngestStats expectedStatsModel2 = new IngestStats(
             new IngestStats.Stats(12, 3, 6, 4),
             Arrays.asList(
-                new IngestStats.PipelineStat("pipeline1", new IngestStats.Stats(10, 1, 6, 2), new IngestStats.ByteStats(6467, 123456)),
-                new IngestStats.PipelineStat("pipeline2", new IngestStats.Stats(2, 2, 0, 2), new IngestStats.ByteStats(234, 345))
+                new IngestStats.PipelineStat(
+                    ProjectId.DEFAULT,
+                    "pipeline1",
+                    new IngestStats.Stats(10, 1, 6, 2),
+                    new IngestStats.ByteStats(6467, 123456)
+                ),
+                new IngestStats.PipelineStat(
+                    ProjectId.DEFAULT,
+                    "pipeline2",
+                    new IngestStats.Stats(2, 2, 0, 2),
+                    new IngestStats.ByteStats(234, 345)
+                )
             ),
-            new HashMap<>() {
+            Map.of(ProjectId.DEFAULT, new HashMap<>() {
                 {
                     put(
                         "pipeline2",
@@ -264,7 +312,7 @@ public class TransportGetTrainedModelsStatsActionTests extends ESTestCase {
                         )
                     );
                 }
-            }
+            })
         );
 
         assertThat(ingestStatsMap, hasEntry("trained_model_1", expectedStatsModel1));
@@ -280,7 +328,10 @@ public class TransportGetTrainedModelsStatsActionTests extends ESTestCase {
         IngestStats ingestStats = new IngestStats(
             overallStats,
             pipelineNames,
-            IntStream.range(0, pipelineids.size()).boxed().collect(Collectors.toMap(pipelineids::get, processorStats::get))
+            Map.of(
+                ProjectId.DEFAULT,
+                IntStream.range(0, pipelineids.size()).boxed().collect(Collectors.toMap(pipelineids::get, processorStats::get))
+            )
         );
         return new NodeStats(
             mock(DiscoveryNode.class),
